--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,34 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<FrameLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logo"/>
-    <EditText
-        android:id="@+id/lg_username"
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/logo"/>
+        <EditText
+            android:id="@+id/lg_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:inputType="text"
+            android:maxLines="1"
+            android:hint="Tài khoản"/>
+        <EditText
+            android:id="@+id/lg_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:inputType="textPassword"
+            android:hint="Mật khẩu"/>
+        <Button
+            android:id="@+id/lg_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Zooo"
+            android:background="@android:color/black"
+            android:textColor="@color/textLight"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/lg_loading_screen"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:inputType="text"
-        android:maxLines="1"
-        android:hint="Tài khoản"/>
-    <EditText
-        android:id="@+id/lg_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:inputType="textPassword"
-        android:hint="Mật khẩu"/>
-    <Button
-        android:id="@+id/lg_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Zooo"
-        android:background="@android:color/black"
-        android:textColor="@color/textLight"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:background="#CC000000"
+        android:visibility="invisible"
+        android:gravity="center"
+        android:layout_gravity="center">
+        <ImageView
+            android:id="@+id/lg_loading_ic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_toys_white_24dp"/>
+    </LinearLayout>
+</FrameLayout>
