--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,9 @@
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:textStyle="bold"/>
-                <ImageView
+                <ImageButton
                     android:id="@+id/tb_person_ic"
+                    android:background="@android:color/transparent"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:scaleType="fitXY"
@@ -38,8 +39,9 @@
                     android:layout_centerVertical="true"
                     android:layout_marginRight="10dp"
                     android:src="@drawable/ic_person_white_48dp"/>
-                <ImageView
+                <ImageButton
                     android:id="@+id/tb_search_ic"
+                    android:background="@android:color/transparent"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:scaleType="fitXY"
