--- a/app/src/main/res/layout/activity_pl.xml
+++ b/app/src/main/res/layout/activity_pl.xml
@@ -59,6 +59,7 @@
         android:id="@+id/recyclerPLItem"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
         android:paddingBottom="60dp" />
 
     <fragment
