--- a/app/src/main/res/layout/album_grid_item.xml
+++ b/app/src/main/res/layout/album_grid_item.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="5dp"
+        android:paddingRight="30dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:background="#99000000"
@@ -45,7 +46,7 @@
         android:scaleType="fitXY"
         android:layout_alignParentRight="true"
         android:layout_alignBottom="@+id/grid_item_image"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/ic_play_circle_filled_orange_40dp"
         android:background="@android:color/transparent"/>
 </RelativeLayout>
