--- a/app/src/main/res/layout/album_grid_item.xml
+++ b/app/src/main/res/layout/album_grid_item.xml
@@ -45,8 +45,8 @@
         android:layout_height="60dp"
         android:scaleType="fitXY"
         android:layout_alignParentRight="true"
-        android:layout_alignBottom="@+id/grid_item_image"
-        android:layout_marginBottom="20dp"
+        android:layout_alignTop="@+id/linearlayoutContactName"
+        android:layout_marginTop="-60dp"
         android:src="@drawable/ic_play_circle_filled_orange_40dp"
         android:background="@android:color/transparent"/>
 </RelativeLayout>
