--- a/app/src/main/res/layout/fragment_current_song.xml
+++ b/app/src/main/res/layout/fragment_current_song.xml
@@ -2,47 +2,52 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/cs_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/default_image" />
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal">
-
-        <ImageView
-            android:id="@+id/cs_image"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerHorizontal="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/default_image" />
+        android:layout_alignBottom="@+id/cs_image"
+        android:background="#99000000"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/cs_image"
-            android:background="#CCD9E2EA"
-            android:gravity="center_vertical"
+            android:paddingLeft="10dp"
+            android:layout_toLeftOf="@+id/love_btn_cs"
             android:orientation="vertical">
-
             <TextView
                 android:id="@+id/cs_song_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
                 android:text="Song's name"
-                android:textColor="@color/textDark"
+                android:textColor="@color/textLight"
                 android:textSize="24dp" />
 
             <TextView
                 android:id="@+id/cs_artist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Song's artist" />
+                android:text="Song's artist"
+                android:textColor="@color/textLight" />
         </LinearLayout>
+        <ImageButton
+            android:id="@+id/love_btn_cs"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="fitXY"
+            android:layout_centerVertical="true"
+            android:background="@android:color/transparent"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_favorite_orange_24dp"/>
     </RelativeLayout>
-
 </RelativeLayout>
